kubernetes/statefulset-with-ingress-and-volume/02-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: centos-xfce-ja
spec:
  serviceName: centos-xfce-ja
  selector:
    matchLabels:
      app: centos-xfce-ja
  replicas: 1
  template:
    metadata:
      labels:
        app: centos-xfce-ja
    spec:
      containers:
      - name: centos-xfce-ja
        image: tmatsuo/centos-xfce-ja
        readinessProbe:
          httpGet:
            path: /term/
            port: 8080
          httpGet:
            path: /desktop/
            port: 8080
        volumeMounts:
        - name: centos-xfce-ja
          mountPath: "/root"
      volumes:
      - name: centos-xfce-ja
        persistentVolumeClaim:
          claimName: centos-xfce-ja
