kubernetes/statefulset-with-ingress-and-volume/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: centos-xfce-ja
spec:
  selector:
    app: centos-xfce-ja
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
